# ihmc_gazebo

./: CMakeLists.txt
gazebo_plugin/: CMakeLists.txt  DRCSimIHMCPlugin.cpp
launch/: atlas_no_controllers.launch  atlas_v5_bringup.launch  ihmc_atlas_standing.launch
src/: DRCSimIHMCPlugin.cpp
urdf/: atlas_v5_reflex_hands.urdf  ihmc_atlas_v5.urdf  ihmc_atlas_v5_robotiq.urdf.xacro
yaml/: effort_controller_config.yaml  hands.yaml
